SONARIAC-1345 Highlight precise simple value in Helm expression in primary location